@@ -1,6 +1,7 @@
 - diskdrake:
   o add support for 'relatime' mount option
   o default laptops to 'relatime' mount option rather than 'noatime'
+  o default all machines to 'relatime' mount option
   o kill support for 'nodiratime' mount option
 
 Version 10.4.168 - 13 August 2007, by Pascal "Pixel" Rigaux
